<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.portx.testcu</groupId>
    <artifactId>cy-edit-1781597057722</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.17.3</quarkus.platform.version>

        <camel-quarkus.platform.artifact-id>camel-quarkus-bom</camel-quarkus.platform.artifact-id>
        <camel-quarkus.platform.group-id>org.apache.camel.quarkus</camel-quarkus.platform.group-id>
        <camel-quarkus.platform.version>3.17.0</camel-quarkus.platform.version>

        <camel.version>4.9.0</camel.version>

        <formatter-maven-plugin.version>2.17.1</formatter-maven-plugin.version>
        <impsort-maven-plugin.version>1.3.2</impsort-maven-plugin.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
        <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
        <mycila-license.version>3.0</mycila-license.version>

        <portx-camel-quarkus-lib.version>2.0.4</portx-camel-quarkus-lib.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.camel</groupId>
                <artifactId>camel-restdsl-openapi-plugin</artifactId>
                <version>${camel.version}</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <specificationUri>
                        src${file.separator}main${file.separator}resources${file.separator}spec${file.separator}swagger.yaml
                    </specificationUri>
                    <packageName>io.portx.testcu</packageName>
                    <outputDirectory>
                        ${project.build.directory}${file.separator}generated-sources${file.separator}openapi${file.separator}src${file.separator}main${file.separator}java
                    </outputDirectory>
                    <restConfiguration>true</restConfiguration>
                    <configOptions>
                        <dateLibrary>java11</dateLibrary>
                    </configOptions>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                    <includes>
                        <include>io/portx/testcu/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <executions>
                    <execution>
                        <id>build</id>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <workingDir>${project.basedir}</workingDir>
                    <properties>
                        <quarkus.package.type>uber-jar</quarkus.package.type>
                    </properties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jboss.jandex</groupId>
                <artifactId>jandex-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>make-index</id>
                        <goals>
                            <goal>jandex</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources</source>
                                <source>${project.build.directory}/generated-sources/openapi</source>
                                <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
                                <source>src/main/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>1.21.0</version>
                <configuration>
                    <verbose>true</verbose>

                    <gitFlowConfig>
                        <releaseBranchPrefix>release/</releaseBranchPrefix>
                    </gitFlowConfig>

                    <commitMessagePrefix>[skip ci]</commitMessagePrefix>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>debug</id>
            <activation>
                <property>
                    <name>debug</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.apache.camel.quarkus</groupId>
                    <artifactId>camel-quarkus-debug</artifactId>
                    <version>${camel.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <systemPropertyVariables>
                                        <quarkus.package.type>${quarkus.package.type}</quarkus.package.type>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <quarkus.package.type>native</quarkus.package.type>
                <quarkus.native.additional-build-args>
                    --add-opens java.base/java.io=ALL-UNNAMED,
                    --add-opens java.base/java.lang=ALL-UNNAMED,
                    -march=compatibility,
                    -H:ResourceConfigurationFiles=resources-config.json,
                    -H:ReflectionConfigurationFiles=reflection-config.json,
                    --initialize-at-run-time=com.github.fge.jsonschema.cfg.ValidationConfigurationBuilder,
                    --initialize-at-run-time=com.github.fge.jackson.JsonNodeReader,
                    --initialize-at-run-time=com.github.fge.jackson.JsonLoader,
                    --initialize-at-run-time=com.github.fge.jsonschema.SchemaVersion,
                    --initialize-at-run-time=org.ehcache.sizeof.impl.JvmInformation,
                    --initialize-at-run-time=org.ehcache.jsr107.Eh107CacheManager,
                    --initialize-at-run-time=org.ehcache.sizeof.impl.AgentSizeOf,
                    --initialize-at-run-time=org.ehcache.shadow.org.terracotta.offheapstore.paging.UpfrontAllocatingPageSource,
                    --initialize-at-run-time=org.ehcache.shadow.org.terracotta.offheapstore.util.PhysicalMemory
                </quarkus.native.additional-build-args>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${camel-quarkus.platform.group-id}</groupId>
                <artifactId>${camel-quarkus.platform.artifact-id}</artifactId>
                <version>${camel-quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Common Camel Quarkus dependencies for all projects -->
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-core</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-xml-io-dsl</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-xml-jaxb</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-direct</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-http</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-microprofile-health</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-datasonnet</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-rest</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-servlet</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-bean</artifactId>
            <version>${camel-quarkus.platform.version}</version>
        </dependency>
<!--        <dependency>-->
<!--             <groupId>io.quarkus</groupId>-->
<!--             <artifactId>quarkus-opentelemetry</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.apache.camel.quarkus</groupId>-->
<!--            <artifactId>camel-quarkus-opentelemetry</artifactId>-->
<!--            <version>${camel-quarkus.platform.version}</version>-->
<!--        </dependency>-->
        <dependency>
          <groupId>io.opentelemetry</groupId>
          <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
        </dependency>
        <dependency>
          <groupId>io.opentelemetry</groupId>
          <artifactId>opentelemetry-sdk-extension-autoconfigure-spi</artifactId>
        </dependency>

        <!-- Common Quarkus dependencies for all projects -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-config-yaml</artifactId>
            <version>${quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-container-image-docker</artifactId>
            <version>${quarkus.platform.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-logging-json</artifactId>
            <version>${quarkus.platform.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>1.5.0</version>
            <scope>test</scope>
        </dependency>

        <!-- SOC2 compliance -->
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.69</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-ext-jdk15on</artifactId>
            <version>1.69</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.15.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.15.0</version>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.4.10</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>22.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.mozilla</groupId>
            <artifactId>rhino</artifactId>
            <version>1.7.12</version>
        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-web</artifactId>
            <version>4.3.8</version>
        </dependency>
        <dependency>
            <groupId>io.swagger.parser.v3</groupId>
            <artifactId>swagger-parser</artifactId>
            <version>2.1.13</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>portx-repository-snapshots</id>
            <name>portx-repository-snapshots</name>
            <snapshots>
                <updatePolicy>always</updatePolicy>
            </snapshots>
            <url>https://portx.jfrog.io/portx/portx-snapshots</url>
        </repository>
        <repository>
            <id>portx-repository-releases</id>
            <name>portx-repository-releases</name>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <url>https://portx.jfrog.io/portx/portx-releases</url>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:https://github.com/portx-testcu/cy-edit-1781597057722.git</connection>
        <developerConnection>scm:git:https://github.com/portx-testcu/cy-edit-1781597057722.git
        </developerConnection>
        <url>https://github.com/portx-testcu/cy-edit-1781597057722.git</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>portx-repository-releases</id>
            <name>PortX Releases Repository</name>
            <url>https://portx.jfrog.io/portx/portx-releases</url>
        </repository>
        <snapshotRepository>
            <id>portx-repository-snapshots</id>
            <name>PortX Snapshots Repository</name>
            <url>https://portx.jfrog.io/portx/portx-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
